# Ianae

./: .dockerignore  .gitignore  CLAUDE.md  Definición_conceptual  INFORME_REORGANIZACION.md  README.md  docker-compose.yml  ianae-architecture-doc.md  ianae-documento.md  ianae-integration-paper.md  ianae-llm-alexa-integration.md  ianae-nlp-integration.md  ianae-workflows-doc.md  orchestra.yaml  pyproject.toml  requirements.txt  resultado_orden5_core.md
.github/workflows/: tests.yml
APP/: ciclos.py  experimento.py  optimizador-ianae.py  optimizador_complemento.py  requirements.txt  setup.py  situacion_actual.md  test_dependencias.py  test_ianae.py
APP/datos/: README.txt
APP/ejemplos/: basicos.py  orientacion.py  texto.py  visualizacion.py
APP/ianae/: __init__.py  ianae_visual.py
APP/ianae.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: conceptos_lucas_poblado.json  ianae_config.json
data/: conversaciones_indice.txt  memory_summary.json
data/snapshots/: snapshot_test_20260210_204801.json  snapshot_verify_20260210_205522.json
docker/: Dockerfile  Dockerfile.docs-service  Dockerfile.tests
docs/: README_APP.md  README_IANAE.md  README_root.md  documentacion_consolidada.md  estado_actual.md  estado_documentacion.md  fases.md  roadmap.md
docs/notas/: analisis_limpio.md  resumen_sesion.md  session_handoff.md
docs/tech/: consultas_inteligentes.md  deep_content_analysis.md  emergente.md  emergente_lucas.md  memory_system.md  procesamiento_conversaciones.md
orchestra/: ESTADO_PROYECTO_COMPLETO.md  GUIA_ARQUITECTO_MAESTRO.md  GUIA_MULTI_WORKER.md  IANAE_ORCHESTRA_DESPLIEGUE_COMPLETO.md  INICIAR_TODO.bat  INSTALACION.md  INSTRUCCIONES_ARRANQUE.md  PLAN_EJECUCION_BCA.md  PLAN_ORCHESTRA_IANAE.md  README.md  RESUMEN_IMPLEMENTACION_V2.md  ROADMAP_FASE_A.md  ROADMAP_FASE_B.md  analisis_refactorizacion_numpy.md  orden_worker_ui_dashboard.json  primera_orden.json  publish_roadmap.py  reporte_dashboard_fase1.md  reporte_fase_a_preparacion.md  reporte_fase_b2_estados.md  reporte_fase_b3_metricas.md  reporte_fase_b4_alertas_errores.md  reporte_fase_c_multi_worker.md  reporte_orden24_dashboard_avanzado.md  reporte_worker_infra_sesion2.md  respuesta_escalado_paralelo.json  sesion_control_20260210.md  start_multi_worker.bat  temp_orden_a2_docker.json  temp_orden_a4_dashboard.json  temp_orden_infra.json  temp_orden_nlp.json  verify_ready_for_multiworker.py  verify_system.py  verify_system_simple.py
orchestra/daemon/: arquitecto_daemon.py  config.py  docs_client.py  dry_run_deepseek.py  llm_provider.py  (+11 more)
src/: __init__.py
tests/: README.md  __init__.py  conftest.py
v3/: .gitignore  ciclo.py  config.py  despertar.py  diario.py  difuso.py  hablar.py  ianae.service  identidades.py  mente.py  reunion.py  sentidos.py
v3-colmena/: ciclo.py  docker-compose.yml  ollama_client.py  reuniones.py
(+259 files in other folders)
